--- a/api/DrMentation/DrMentation/DrMentation.csproj
+++ b/api/DrMentation/DrMentation/DrMentation.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\DrMentation.Contracts\DrMentation.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="2.0.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
