--- a/api/DrMentation/DrMentation/appsettings.json
+++ b/api/DrMentation/DrMentation/appsettings.json
@@ -2,8 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore": "Debug"  // Setting this to Debug will include more detailed logs from ASP.NET Core
     }
   },
   "AllowedHosts": "*"
 }
+
