--- a/frontend/dr-mentation/package.json
+++ b/frontend/dr-mentation/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
