--- a/frontent/DrMentation/package.json
+++ b/frontent/DrMentation/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-external-links": "^3.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0"
