feat: search document api endpoint

--- a/api/DrMentation/docker/Dockerfile
+++ b/api/DrMentation/docker/Dockerfile
@@ -1,12 +1,12 @@
-# Use the official Microsoft .NET 6 SDK image from Docker Hub
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+# Use the official Microsoft .NET 6 SDK image from Docker Hub for build and runtime
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS base
 
 WORKDIR /app
 
 EXPOSE 8080
 EXPOSE 8081
 
-
+# Use the SDK image to build the application
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 
 ARG BUILD_CONFIGURATION=Release
@@ -27,9 +27,9 @@ FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "DrMentation.csproj" -c $BUILD_CONFIGURATION -o /app/publish
 
-
-FROM base AS final
+# Use the SDK image for the final runtime stage to enable dotnet watch
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "DrMentation.dll"]
+ENTRYPOINT ["dotnet", "watch", "run", "--project", "DrMentation", "--urls", "http://+:80", "--no-launch-profile"]
 
