--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "rehype-external-links": "^3.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
