--- a/compose.yml
+++ b/compose.yml
@@ -1,17 +1,4 @@
 services:
-  backend-api:
-    ports:
-      - "5045:80"
-    build:
-      context: ./api/DrMentation
-      dockerfile: docker/Dockerfile
-    volumes:
-      - ./api/DrMentation:/app
-      - /app/bin
-      - /app/obj
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-
   frontend-app:
     ports:
       - "5173:5173"
@@ -23,4 +10,21 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+  backend-api-v2:
+    build:
+      context: ./api/v2
+      dockerfile: Dockerfile
+    ports:
+      - "5045:5045"
+    volumes:
+      - ./api/v2:/app
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME:
+      MONGO_INITDB_ROOT_PASSWORD:
+    volumes:
+      - ./data:/data/db
 
