--- a/api/v2/Dockerfile
+++ b/api/v2/Dockerfile
@@ -1,9 +1,9 @@
 # Choose whatever you want, version >= 1.16
-FROM golang:1.22-alpine
+FROM golang:1.23-alpine
 
 WORKDIR /app
 
-RUN go install github.com/air-verse/air@latest
+RUN go install github.com/air-verse/air@v1.61.0
 
 COPY go.mod go.sum ./
 RUN go mod download
